2006-12-13  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>

	* unichrome/via_video.c:

	Don't use HQV Offset for HQV_CONTROL

2006-12-11  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>

	* unichrome/via_video.c:
	* unichrome/via_swov.c:

	Looks like the VT3336 has the same offset as the VT3259
	for the hardware overlay

2006-12-10  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>

	* unichrome/via_memcpy.c:
	* unichrome/via_swov.c:

	Removed the previous changes I am not ready to rewrite
	the assembly code for x86_64.
	The ColorSpace registers were being setup incorrectly
	for VT3336

2006-12-09  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>

	* unichrome/via_memcpy.c:

	ifdef's in memcpy.c only support i386 arch should
	also support i86_64

2006-12-09  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>

	* unichrome/via_xvmc.c:

	K8M890 does not support XvMC like the other chipsets
	disable it for now

2006-12-09  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>

	* unichrome/via_video.h:
	* unichrome/via_swov.h:
	* unichrome/via_swov.c:

	Made K8M890 XV FIFO settings match K8M800
	Enabled XV_DEBUG

2006-12-07  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>

	* unichrome/via_mode.h:

	Updated the BandwidthTable for K8M890 chipset.

2006-12-07  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_driver.c: (VIAEnterVT):

	Initialize the AGP ring buffer before command submission.

2006-12-07  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_driver.c: (VIAEnterVT):

	Blank and clear screen when entering VT.
	
2006-12-07  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_driver.c: (VIAEnterVT):

	Blank and clear screen when entering VT.
	
2006-12-07  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_accel.c: (viaAccelDMADownload),
	(viaExaDownloadFromScreen), (viaInitExa):

	Indent via_accel.c
