@@ -259,6 +259,8 @@
 #define V1_ON_SND_DISPLAY       0x80000000
 #define V1_FIFO_32V1_32V2       0x00000000
 #define V1_FIFO_48V1_32V2       0x00200000
+#define V1_PREFETCH_ON_3336     0x40000000  /*V1_PREFETCH_ON*/
+#define V1_GAMMA_ENABLE_3336    0x20000000  /*V1_Gamma_ENABLE*/
 
 /* V12_QWORD_PER_LINE           0x234 */
 #define V1_FETCH_COUNT          0x3ff00000
@@ -317,6 +319,11 @@
 #define V1_FIFO_PRETHRESHOLD44  0x2c000000
 #define V1_FIFO_PRETHRESHOLD56  0x38000000   
 #define V1_FIFO_PRETHRESHOLD61  0x3D000000   
+
+#define VIDEO_FIFO_DEPTH_VT3336             225  
+#define VIDEO_FIFO_THRESHOLD_VT3336         200
+#define VIDEO_FIFO_PRETHRESHOLD_VT3336      250
+#define VIDEO_EXPIRE_NUM_VT3336             31
 
 /* ALPHA_V3_FIFO_CONTROL        0x278
  * IA2 has 32 level FIFO for packet mode video format
