@@ -1,3 +1,13 @@
+2006-12-15  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>
+
+	* unichrome/via.h:
+	* unichrome/via_swov.c:
+
+	This is my cleanup committ of the excellent patch that 
+	Gabriel Mansi <gabriel-dot-mansi-at-gmail-dot-com> provided
+	which finishes the XVideo work on the VT3336 chipset.  Nice
+	Work Gabriel.
+
 2006-12-13  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>
 
 	* unichrome/via_video.c:
